[CHANGE] Fix some windows' scrollbar not showing

--- a/Client/Window/angular/projects/main/src/app/components/tdswindow/styles/window/window.design1.scss
+++ b/Client/Window/angular/projects/main/src/app/components/tdswindow/styles/window/window.design1.scss
@@ -14,6 +14,8 @@
         overflow-y: auto;
         padding: 10px;
         flex-grow: 1;
+        display: flex;
+        flex-direction: column;
 
         .loading-container {
             width: 100%;
